Modified the structure of UserDTO. Media Player Activity changed. Adding request DTOs. Other minor changes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,8 @@
     <string name="title_activity_playlist">PlaylistActivity</string>
     <string name="title_activity_music_library">MusicLibraryActivity</string>
     <string name="title_activity_youtube_player">YoutubePlayer</string>
+
+    <string name="title_activity_user_profile">UserProfileActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
