Dynamic Permission feature added. Built an error template Fragment. Created an activity to display userslist. A view of all users who have liked the song. Partially made some fragments stateless.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,8 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="title_activity_song_share">SongShareActivity</string>
+
+    <string name="default_error_message">Something went wrong. Please restart the app and try again.</string>
+    <string name="title_activity_user_list">UserListActivity</string>
+
 </resources>
